attempting to fix card on mobile

--- a/app/styles.css
+++ b/app/styles.css
@@ -298,12 +298,13 @@ small,
 
 /* CONTACTS STYLING */
 .contact-card {
-    min-height: 100px;
+
     /* Adjust as needed */
-    max-height: 200px;
+
     /* Adjust as needed */
     height: auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
